added info and photo

--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html>
+  <head>
+    <title>Dmitri_M CV</title>
+  </head>
+
+  <body>
+    <hr size="5px" noshade="" width="777" align="left"/>
+    <h1>Dmitri Murtazin</h1>
+    <img
+      src="photo.jpg" 
+      alt="The image with code abstract samle on it"
+      width="200" />
+    <h4>Junior Front-end engineer</h4>
+    <h3>Work experience</h3>
+  
+    <p>
+      <strong>2020 - present</strong> Junior Front-End at <a href="https://google.com/">Microsoft Apple Utd.</a>
+      </p>
+    Developing new system for merging files.
+    <p>
+      <strong>2015 - 2020</strong> Junior Front-End at <a href="https://google.com/">RobotDreams</a>
+      </p>
+    Developing server connections with AI.  
+    <h3>Skills:</h3>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Ping Pong</li>
+    </ul>
+
+    <h3>Achievements:</h3>
+    <ol>
+      <li>Best ping pong player</li>
+      <li>Merging Apple with Microsoft</li>
+      <li>A father</li>
+    </ol>
+
+  </body>
 </html>
