--- a/Index.html
+++ b/Index.html
@@ -13,28 +13,39 @@
       width="200" />
     <h4>Junior Front-end engineer</h4>
     <h3>Work experience</h3>
-  
-    <p>
-      <strong>2020 - present</strong> Junior Front-End at <a href="https://google.com/">Microsoft Apple Utd.</a>
-      </p>
-    Developing new system for merging files.
-    <p>
-      <strong>2015 - 2020</strong> Junior Front-End at <a href="https://google.com/">RobotDreams</a>
-      </p>
-    Developing server connections with AI.  
-    <h3>Skills:</h3>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Ping Pong</li>
-    </ul>
-
-    <h3>Achievements:</h3>
-    <ol>
-      <li>Best ping pong player</li>
-      <li>Merging Apple with Microsoft</li>
-      <li>A father</li>
-    </ol>
-
+    <table border="1" cellspacing="0" cellpadding="10px">
+      <thead>
+        <tr>
+          <th>Period:</th>
+          <th>Position</th>
+        </tr>
+        <tr>
+          <td>2020 - present</td>
+          <td>Junior Front-End at <a href="https://google.com/">Microsoft Apple Utd.</a></td>
+        </tr>
+        <tr>
+          <th rowspan="2">Description</th>
+          <td>Developing new system for merging files</td>
+          </tr>
+        <tr>
+          <td>Clearing cache</td>
+        </tr>
+        <tr>
+          <td>2015 - 2020</td>
+          <td>Junior Front-End at <a href="https://google.com/">RobotDreams</a></td>
+        </tr>
+        <tr>
+          <th rowspan="3">Description</th>
+          <td>Developing server connections with AI.</td>
+          </tr>
+        <tr>
+          <td>Data analysis</td>
+        </tr>
+        <tr>
+          <td>React/Redux implementing</td>
+        </tr>
+      </thead>
+    </table>
+    
   </body>
 </html>
