Minor changes in photo desc

--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
     <h1>Dmitri Murtazin</h1>
     <img
       src="photo.jpg" 
-      alt="The image with code abstract samle on it"
+      alt="Here should be my photo"
       width="200" />
     <h4>Junior Front-end engineer</h4>
     <h3>Work experience</h3>
