first CSS implemeted

--- a/Index.html
+++ b/Index.html
@@ -2,31 +2,33 @@
 <html>
   <head>
     <title>Dmitri_M CV</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
 
   <body>
+   <div class="text">
     <hr size="5px" noshade="" width="777" align="left"/>
-    <h1>Dmitri Murtazin</h1>
-    <a href="Forms.html">Найняти менe</a>
+    <p class="name">Dmitri Murtazin</p>
+    <a class="link" href="Forms.html">Найняти менe</a>
     <br /><br />
     <img
       src="photo.jpg" 
       alt="Here should be my photo"
       width="200" />
-    <h4>Junior Front-end engineer</h4>
-    <h3>Work experience</h3>
+    <p class="position">Junior Front-end engineer</p>
+    <h2>Work experience</h2>
     <table border="1" cellspacing="0" cellpadding="10px">
       <thead>
         <tr>
-          <th>Period:</th>
-          <th>Position</th>
+          <th class="title">Period:</th>
+          <th class="title">Position</th>
         </tr>
         <tr>
           <td>2020 - present</td>
-          <td>Junior Front-End at <a href="https://google.com/">Microsoft Apple Utd.</a></td>
+          <td>Junior Front-End at <a class="link" href="https://google.com/">Microsoft Apple Utd.</a></td>
         </tr>
         <tr>
-          <th rowspan="2">Description</th>
+          <th rowspan="2" class="title">Description</th>
           <td>Developing new system for merging files</td>
           </tr>
         <tr>
@@ -34,10 +36,10 @@
         </tr>
         <tr>
           <td>2015 - 2020</td>
-          <td>Junior Front-End at <a href="https://google.com/">RobotDreams</a></td>
+          <td>Junior Front-End at <a class="link" href="https://robotdreams.cc/">RobotDreams</a></td>
         </tr>
         <tr>
-          <th rowspan="3">Description</th>
+          <th rowspan="3" class="title">Description</th>
           <td>Developing server connections with AI.</td>
           </tr>
         <tr>
@@ -48,6 +50,18 @@
         </tr>
       </thead>
     </table>
-    
+  <h2>Skills:</h2>
+    <ul class="list">
+     <li>HTML</li>
+     <li>CSS</li>
+     <li>Ping Pong</li>
+    </ul>
+  <h2>Achievements:</h2>
+    <ol>
+     <li>Merged Apple and Microsoft</li>
+     <li>Ping Pong champion</li>
+     <li>A Father</li>
+    </ol>
+   </div>  
   </body>
 </html>
