formatting table title image added

--- a/Index.html
+++ b/Index.html
@@ -2,21 +2,26 @@
 <html>
   <head>
     <title>Dmitri_M CV</title>
-    <link rel="stylesheet" href="./style.css">
+      <link rel="stylesheet" href="./style.css">
+      <style>
+        td {background-color: rgb(241, 245, 18); color:blue }
+        tr {background-color: rgb(77, 77, 252); color: aliceblue;}
+      </style>
   </head>
 
   <body>
    <div class="text">
     <hr size="5px" noshade="" width="777" align="left"/>
-    <p class="name">Dmitri Murtazin</p>
+     <p class="name section">Dmitri Murtazin</p>
+   
     <a class="link" href="Forms.html">Найняти менe</a>
     <br /><br />
-    <img
+    <img class="image"
       src="photo.jpg" 
       alt="Here should be my photo"
       width="200" />
     <p class="position">Junior Front-end engineer</p>
-    <h2>Work experience</h2>
+    <h2 class="section">Work experience</h2>
     <table border="1" cellspacing="0" cellpadding="10px">
       <thead>
         <tr>
@@ -50,13 +55,13 @@
         </tr>
       </thead>
     </table>
-  <h2>Skills:</h2>
+  <h2 class="section">Skills:</h2>
     <ul class="list">
      <li>HTML</li>
      <li>CSS</li>
      <li>Ping Pong</li>
     </ul>
-  <h2>Achievements:</h2>
+  <h2 class="section">Achievements:</h2>
     <ol>
      <li>Merged Apple and Microsoft</li>
      <li>Ping Pong champion</li>
