added link to form

--- a/cv.html
+++ b/cv.html
@@ -13,7 +13,9 @@
                 <span style="color: #FFFFFF;">Dmitri</span> 
                 <span style="color: #1C2E8C;">Murtazin</span>
             </div>
+            <a href="./Forms.html">
             <img class="photo" src="photo-1.jpg">
+            </a>
             <div class="left-section">
                 <h2>Contact</h2>
                 <span class="left-title">Address</span>
