--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet"></head>
 <body>
-    <div>
+    <div class="wrapper">
         <div class="column-left">
             <div class="name">
                 <span style="color: #FFFFFF;">Dmitri</span> 
@@ -16,6 +16,7 @@
             <a href="./Forms.html">
             <img class="photo" src="photo-1.jpg">
             </a>
+            <div class="left-info">
             <div class="left-section">
                 <h2>Contact</h2>
                 <span class="left-title">Address</span>
@@ -32,6 +33,7 @@
                 <h2>Languages</h2>
                 <span class="lang-font">Ukrainian - C2</span>
                 <span class="lang-font">English - B2</span>
+            </div>
             </div>
         </div>
         <div class="column-right">
