fixed styles in hire-me

--- a/hire-me.html
+++ b/hire-me.html
@@ -11,7 +11,7 @@
   <main>
     <h1>Запропонувати роботу</h1>
     <h3>Контактні дані</h3>
-    <table border="1" cellspacing="0" cellpadding="10px">
+    <table cellspacing="0" cellpadding="10px">
     <tr>
       <th>Телефон</th>
       <td>+380939414145</td>
@@ -25,10 +25,10 @@
       <td>Одеса</td>
     </tr>
     </table>
-    <form action="/forms.html" method="get">
+    <div class="hire-me">
+    <form action="/hire-me.html" method="get">
           <br />
           <fieldset>
-            <legend>Зворотній зв'язок</legend>
             <div class="label-row">
             <label class="required" for="e-mail">
               Ваш e-mail:
@@ -74,6 +74,7 @@
           </fieldset>
              
         </form>
+      </div>
   </main>    
 </body>
 </html>
