style variables added

--- a/Index.html
+++ b/Index.html
@@ -3,15 +3,16 @@
     <meta charset="UTF-8">
     <title>Dmitri Murtazin CV</title>
     <link rel="stylesheet" href="./cv-styles.css">
+    <link rel="stylesheet" href="./cv-styles-1.css"
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet"></head>
-<body>
+<body class="main-theme">
     <div class="wrapper">
         <div class="column-left">
             <div class="name">
-                <span style="color: #FFFFFF;">Dmitri</span> 
-                <span style="color: #1C2E8C;">Murtazin</span>
+                <span class="f-name">Dmitri</span> 
+                <span class="surname">Murtazin</span>
             </div>
             <a href="./hire-me.html">
             <img class="photo" src="photo-1.jpg">
@@ -24,8 +25,9 @@
                 <span class="left-title">Phone</span>
                 <span class="left-regular">+380685445089</span>
                 <span class="left-title">E-mail</span>
-                <a href="mailto: dmitri.murt@gmail.com">
-                <span class="left-regular">dmitri.murt@gmail.com</span></a>
+                <span class="left-regular">
+                    <a href="mailto: dmitri.murt@gmail.com">
+                dmitri.murt@gmail.com</span></a>
                 <span class="left-title">Linkedin</span>
                 <span class="left-regular"><a href="https://www.linkedin.com/in/dmitri-murtazin" >https://www.linkedin.com/in/dmitri-murtazin</a></span>
             </div>
@@ -100,6 +102,7 @@
                 
             
         </div>
+    </div>
     </div>
 </body>
 </html>
