--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <title>Dmitri Murtazin CV</title>
     <link rel="stylesheet" href="./cv-styles.css">
-    <link rel="stylesheet" href="./cv-styles-1.css"
+    <link rel="stylesheet" href="./cv-styles-1.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet"></head>
