shadow and transform implemented

--- a/Index.html
+++ b/Index.html
@@ -56,36 +56,38 @@
                     <li>Ping Pong</li>
                 </ul>
             </div>
-            <div class="main-title">
-                <h1>Work Experience</h1>
-                <span class="thin">
-                    <b>Name of employer:</b> Microsoft Apple Utd. 
-                </span>
-                <span class="thin">
-                    <b>Dates of employment:</b> 2020 - present
-                </span>
-                <span class="thin">
-                    <b>Job title:</b> Junior Front-End
-                </span>
-                <span class="thin">
-                    <b>Project/Role description:</b> Important merging of all data by using JS, CSS and bad words. Successfuly completed internal web-based system.</span>
-                <span class="thin">Won ping-pong tournament agains top managers.</span>
-                
+            <div>
+                    <h1>Work Experience</h1>
+                <div>
+                    <span class="thin">
+                        <b>Name of employer:</b> Microsoft Apple Utd. 
+                    </span>
+                    <span class="thin">
+                        <b>Dates of employment:</b> 2020 - present
+                    </span>
+                    <span class="thin">
+                        <b>Job title:</b> Junior Front-End
+                    </span>
+                    <span class="thin">
+                        <b>Project/Role description:</b> Important merging of all data by using JS, CSS and bad words. Successfuly completed internal web-based system.</span>
+                    <span class="thin">Won ping-pong tournament agains top managers.</span>
+                </div>
 
                 <br>
-
-                <span class="thin">
-                    <b>Name of employer:</b> RobotDreams 
-                </span>
-                <span class="thin">
-                    <b>Dates of employment:</b> 2015 - 2020
-                </span>
-                <span class="thin">
-                    <b>Job title:</b> Junior Front-End
-                </span>
-                <span class="thin">
-                    <b>Project/Role description:</b> Developing server connections with AI. Implementing React/Redux to the current system. Losing ping-pong tornament.
-                </span>
+                <div class="previous-job">
+                    <span class="thin">
+                        <b>Name of employer:</b> RobotDreams 
+                    </span>
+                    <span class="thin">
+                        <b>Dates of employment:</b> 2015 - 2020
+                    </span>
+                    <span class="thin">
+                        <b>Job title:</b> Junior Front-End
+                    </span>
+                    <span class="thin">
+                        <b>Project/Role description:</b> Developing server connections with AI. Implementing React/Redux to the current system. Losing ping-pong tornament.
+                    </span>
+                </div>
 
             </div>
             <div class="main-title">
