--- a/Index.html
+++ b/Index.html
@@ -2,8 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dmitri Murtazin CV</title>
-    <link rel="stylesheet" href="./cv-styles.css">
-    <link rel="stylesheet" href="./cv-styles-1.css">
+    <link rel="stylesheet" href="./styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,7 +55,7 @@
                     <li>Ping Pong</li>
                 </ul>
             </div>
-            <div>
+            <div class="main-title">
                     <h1>Work Experience</h1>
                 <div>
                     <span class="thin">
